# esp32-weather-clock-idf

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
main/: CMakeLists.txt  gui.c  main.c  pwm.c  smart_config.c  sntp_time.c  storage.c  url_encode.c  weather.c  wifi.c
main/assets/: d00.c  d01.c  d02.c  d03.c  d04.c  d05.c  d06.c  d07.c  d08.c  d09.c  d10.c  d11.c  d12.c  d13.c  d14.c  d15.c  d16.c  d17.c  d18.c  d19.c  d20.c  d21.c  d22.c  d23.c  d24.c  d25.c  d26.c  d27.c  d28.c  d29.c  d30.c  d31.c  d53.c  humidity.c  n00.c  n01.c  n03.c  n15.c  qr_code.c  taikongren01.c  (+15 more)
main/font/: fz_20.c  fz_22.c  ht_20.c  ht_22.c  mkb_30.c  mkb_60.c  mkb_70.c  mkb_80.c  mono_30.c  mono_70.c  myfont_3500hz_18.c  th_20.c  th_30.c  th_60.c
main/inc/: event.h  gui.h  pwm.h  smart_config.h  sntp_time.h  storage.h  weather.h  wifi.h
main/page/: info.html  root.html
